crates/tracing/tests/ui/log/component_with_unlisted_field.stderr
error: `foo` is not in the OpenTelemetry allowlist
 --> tests/ui/log/component_with_unlisted_field.rs:4:16
  |
4 |     warn!(rpc: foo = %x, "msg");
  |                ^^^
