crates/tracing/tests/ui/log/component_with_unlisted_field.rs
use miden_node_tracing::warn;

fn main() {
    warn!(rpc: foo = %x, "msg");
}
